feat: comprehensive enhancement of Router Service for high-throughput message processing
- Ultra-high performance message pipeline with Ring Buffer (Disruptor) and zero-copy processing
- Complete Cloud Spanner schema for message state tracking and idempotency management
- Advanced message transformation engine with XML→JSON streaming processing <150ms
- Dynamic routing orchestrator with intelligent topic resolution and load balancing
- Stage-wise performance budgets: Validation 50ms, Transform 100ms, Routing 25ms, Delivery 400ms
- Production-safe chaos engineering for IBM MQ→Kafka bridge reliability testing
- Advanced circuit breaker hierarchy with MQ/Kafka/Spanner level protection
- Redis cluster optimization with Bloom filter for sub-5ms idempotency checks
- Comprehensive operational UI with real-time message flow visualization and error tracking
- Multi-tier fallback strategy: Kafka→Spanner→S3→Manual intervention
- Message traceability with unique correlation IDs and complete audit trails
- JVM optimization with ZGC and virtual threads for ultra-low latency processing
- Advanced routing rules engine with hot-reload and A/B testing capabilities

The router service now provides implementation-ready specifications for high-throughput
message processing with enterprise-grade reliability, comprehensive error handling,
and real-time operational dashboards for the critical IBM MQ to Kafka bridge.